# exercism-solutions

./: README.md
python/: pyproject.toml
python/currency-exchange/: exchange.py
python/currency-exchange/.exercism/: metadata.json
python/ghost-gobble-arcade-game/: arcade_game.py
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/grains/: grains.py
python/grains/.exercism/: metadata.json
python/guidos-gorgeous-lasagna/: lasagna.py
python/guidos-gorgeous-lasagna/.exercism/: metadata.json
python/hello-world/.exercism/: metadata.json
