[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["inafranco <inafranco.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"
pytest-cache = "^1.0"
pytest-subtests = "^0.7.0"
pylint = "^2.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
